--- a/challange/dicee.html
+++ b/challange/dicee.html
@@ -25,7 +25,7 @@
       </div>
     </div>
 
-    <footer>www 🎲 App Brewery 🎲 com</footer>
+    <footer>no refresh button 🥲</footer>
     <script>
 
       function random() {
