--- a/Drum Kit Starting Files/index.html
+++ b/Drum Kit Starting Files/index.html
@@ -22,7 +22,7 @@
 
 
   <footer>
-    Made with ❤️ in London.
+    thanks for visiting ❤️
   </footer>
   <script src="/index.js"></script>
 </body>
