--- a/dating-web/index.html
+++ b/dating-web/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HumanDate</title>
+  <title>Dating website</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="/11.3 TinDog Project/css/style.css">
 </head>
@@ -209,7 +209,7 @@
       <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 mt-5 border-top">
         <div class="col mb-3">
 
-          <p class="text-body-secondary">© date</p>
+          <p class="text-body-secondary">© date created by aasif <a href="www.linkedin.com/in/aasif-bagvan">Linkdln</a> </p>
         </div>
 
         <div class="col mb-3">
@@ -248,6 +248,7 @@
             <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
           </ul>
         </div>
+        
       </footer>
     </div>
   </section>
