--- a/dating-web/index.html
+++ b/dating-web/index.html
@@ -209,7 +209,7 @@
       <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 mt-5 border-top">
         <div class="col mb-3">
 
-          <p class="text-body-secondary">© date created by aasif <a href="www.linkedin.com/in/aasif-bagvan">Linkdln</a> </p>
+          <p class="text-body-secondary">© date created by aasif <a href="https://www.linkedin.com/in/aasif-bagvan">Linkdln</a> </p>
         </div>
 
         <div class="col mb-3">
